--- a/html/index.html
+++ b/html/index.html
@@ -12,6 +12,7 @@
 
 <p>A Work in progress.</p>
 
+<p>Come back soon.</p>
 <!--<p>To try to answer your request for information about my granddad&#8217;s recipe collection.. My grandmother was the cook, and when she became too ill to do it, Granddad took over for her. Not knowing how, he had to teach himself. He collected recipes and hints from friends, relatives, and neighbors. Being an engineer, he was precise as to the proportions. Some of the recipes were old, and handed down. Some were his own &#8211; do not know if this means he found and included ones he liked, or actually developed them. But he did use and modify some of the recipes to his liking. He included the names of individuals with the recipe when given to him by someone. I can remember being in his kitchen when he would grind his own meat and sausage. He raised chickens, had a garden, and a wonderfully giving fig tree. Kevin gave me most of the information. Tim did not remember as much. Still have not asked Archie or Craig. (Oldest and youngest of the four) If you need more, and there is time still, I will call them.</p>-->
 </body>
 </html>
