--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
-	<title>Archie's Recipes</title>
+	<title>Archie’s Recipes</title>
 	<meta name="keywords" content="recipe book archive"/>
 	<meta name="date" content="December 22, 2012"/>
 </head>
 <body>
-<h1>Archie&#8217;s Recipes</h1>
+<h1>Archie’s Recipes</h1>
 </body>
 </html>
