Finalized styles, tested in IE 8, first blog entry, deleted sample content

--- a/html/about.html
+++ b/html/about.html
@@ -9,6 +9,18 @@
 <body>
 <h1>About</h1>
 
-<p>To try to answer your request for information about my granddad&#8217;s recipe collection.. My grandmother was the cook, and when she became too ill to do it, Granddad took over for her. Not knowing how, he had to teach himself. He collected recipes and hints from friends, relatives, and neighbors. Being an engineer, he was precise as to the proportions. Some of the recipes were old, and handed down. Some were his own &#8211; do not know if this means he found and included ones he liked, or actually developed them. But he did use and modify some of the recipes to his liking. He included the names of individuals with the recipe when given to him by someone. I can remember being in his kitchen when he would grind his own meat and sausage. He raised chickens, had a garden, and a wonderfully giving fig tree. Kevin gave me most of the information. Tim did not remember as much. Still have not asked Archie or Craig. (Oldest and youngest of the four) If you need more, and there is time still, I will call them.</p>
+<p>I only recall meeting my great-grandfather <strong>Archie William Diegel</strong> once. I was very young, visiting grandparents in Knoxville, Tennessee with my parents. He seemed nice but giant and scary like all adults. When I had the opportunity to photograph his recipe book, I realized that my love of food and cooking runs deep, perhaps to the bone, perhaps to my DNA. I felt a strong connection to this person I never knew simply because, well, this book is how I would have done it.</p>
+
+<p>When carefully scanning each page, my first priority was simply to keep a copy. I printed all the pages, and bound a copy for myself and my parents, so the original could go back home to Tennessee. Each time I mentioned it, or thought about it, I thought it was something that should be shared.</p>
+
+<h2>The recipe book</h2>
+
+<p>According to my mother, her grandmother (Chloe Pernie Keith Diegel) was the cook in the family. One day she became too ill to keep up with the kitchen, so Archie, her grandfather, took over for her. He didn’t know how to cook; he had to teach himself. He was an engineer, so he was very precise. He collected recipes and hints from friends, relatives, and neighbors. Some of the recipes were old and handed down. Some were his own discoveries or modifications. He made sure to credit anyone whose recipe he included by name.</p>
+
+<p>My mother remembers him in the kitchen, grinding meat and making his own sausage. He raised his own chickens, kept a garden, and a prolific fig tree.</p>
+
+<h2>The editor</h2>
+
+<p>My name is Michael Barrett. I’m a software developer with an art background. I grew up Charlotte, NC and live in Portland, OR. I write regularly at <a href="http://abouthalf.com">abouthalf.com</a>. </p>
 </body>
 </html>
