--- a/html/index.html
+++ b/html/index.html
@@ -5,9 +5,14 @@
 	<meta name="format" content="complete"/>
 	<title>Archie’s Recipes</title>
 	<meta name="keywords" content="recipe book archive"/>
-	<meta name="date" content="December 22, 2012"/>
 </head>
 <body>
 <h1>Archie’s Recipes</h1>
+
+<p>When my grandparents passed away, my mother’s family rediscovered an old recipe book, written into an old ledger. The book contains 90 pages of recipes, categorized, and even indexed — all by hand. </p>
+
+<p>The cover is tattered and worn. The pages are yellow and finger-printed from use. The same steady handwriting in blue ink appears throughout. The recipes range from cocktail sauce to homemade wine. Some recipes are old family recipes, some are collected from friends and neighbors, and some are clipped from newspapers.</p>
+
+<p>This site attempts to archive this historical, family artifact and share it with a wider audience. Browse the recipes with the ‘next’ and ‘previous’ links on each page. <a href="about.html">Learn more about the book here</a>. Updates and newly added pages will be announced in the <a href="/blog/">blog</a>.</p>
 </body>
 </html>
