Updated content with keywords, titles, etc

--- a/html/03.html
+++ b/html/03.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 3, Bread</title>
+	<meta name="keywords" content="Bread, cornbread sticks, corn sticks, nut bread"/>
 </head>
 <body>
 <h1>Bread</h1>
