--- a/html/04.html
+++ b/html/04.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 4, Bread continued</title>
+	<meta name="keywords" content="nut bread, gingerbread"/>
 </head>
 <body>
 <h2>Nut bread</h2>
