--- a/html/06.html
+++ b/html/06.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 6, Bread continued</title>
+	<meta name="keywords" content="ice box hot rolls, gingerbread"/>
 </head>
 <body>
 <h2>Ice box hot rolls</h2>
