--- a/html/08.html
+++ b/html/08.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 8, Casserole continued</title>
+	<meta name="keywords" content="spaghetti and ham, meat and rice,"/>
 </head>
 <body>
 <h2>Spaghetti and ham</h2>
