--- a/html/08a.html
+++ b/html/08a.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 8a, overlay, Chef’s Pride Spaghetti</title>
+	<meta name="keywords" content="clipping, spaghetti"/>
 </head>
 <body>
 <h2>Chef&#8217;s pride–spaghetti</h2>
@@ -22,5 +24,9 @@
 <p>do not put the spaghetti into the sauce, but arrange it on a deep platter or casserole as shown in the picture. Pour the sauce over the spaghetti, or bring it to the table in a separate serving dish so that each person may help himself.</p>
 
 <p>It&#8217;s quite essential to have a bowlful of grated sharp cheese (Parmesan in the Italian variety) which is sprinkled generously by each diner over his portion. Crisp bread sticks, or a crusty loaf of French bread warmed in the oven should go with this meal. Because the spaghetti is very filling I serve only a very simple green salad, and a light dessert, such as fruit.</p>
+
+<blockquote>
+<p><strong>Editor’s Note:</strong> This is a transcription of a magazine clipping taped onto page 8.</p>
+</blockquote>
 </body>
 </html>
