--- a/html/overlay.html
+++ b/html/overlay.html
@@ -9,6 +9,10 @@
 <!-- @import “documentHead” -->
 </head>
 <body>
-<h1><a href="index_290.html">Index page 290</a></h1>
+<h1>Index page 290</h1>
+
+<blockquote>
+<p><strong>Editor’s Note:</strong> Archie included a hand-written and numbered index at the end of his recipe book. On this overlay page, between the cover and the first recipe, he made a note to anyone looking where they could find the index. When the index is complete, this page will link there.</p>
+</blockquote>
 </body>
 </html>
