--- a/html/05.html
+++ b/html/05.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 5, Bread continued</title>
+	<meta name="keywords" content="hot rolls,"/>
 </head>
 <body>
 <h2>Hot rolls</h2>
