--- a/html/07.html
+++ b/html/07.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 7, Casserole</title>
+	<meta name="keywords" content="casserole, mock chicken, meat balls,"/>
 </head>
 <body>
 <h1>Casserole</h1>
