--- a/html/09.html
+++ b/html/09.html
@@ -3,6 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<meta name="format" content="complete"/>
+	<title>Page 9, Cake</title>
+	<meta name="keywords" content="cake, spice cake, pound cake"/>
 </head>
 <body>
 <h1>Cake</h1>
@@ -10,18 +12,21 @@
 <h2>Spice cake</h2>
 
 <ul>
-<li><p>1/3 cup shortening</p></li>
-<li><p>1 cup sugar</p></li>
-<li><p>1 cup sweet milk</p></li>
-<li><p>2 cups flour</p></li>
-<li><p>1 cup raisins</p></li>
-<li><p>1 1/2 teaspoon cinnamon </p></li>
-<li><p>3 eggs</p></li>
-<li><p>3/4 teaspoon nutmeg</p></li>
-<li><p>1/4 teaspoon cloves</p></li>
-<li><p>1/4 teaspoon salt</p></li>
-<li><p>1 teaspoon soda</p></li>
-<li><p>Mrs. Regner</p></li>
+<li>1/3 cup shortening</li>
+<li>1 cup sugar</li>
+<li>1 cup sweet milk</li>
+<li>2 cups flour</li>
+<li>1 cup raisins</li>
+<li>1 1/2 teaspoon cinnamon</li>
+<li>3 eggs</li>
+<li>3/4 teaspoon nutmeg</li>
+<li>1/4 teaspoon cloves</li>
+<li>1/4 teaspoon salt</li>
+<li>1 teaspoon soda</li>
+</ul>
+
+<ul>
+	<li>Mrs. Regner</li>
 </ul>
 
 <h2>Poor devil food cake</h2>
