--- a/html/index_290.html
+++ b/html/index_290.html
@@ -181,7 +181,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Coconut Cream</td>
-	<td style="text-align:right;">11</td>
+	<td style="text-align:right;"><a href="/11.html">11</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chocolate</td>
@@ -213,7 +213,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Layer</td>
-	<td style="text-align:right;">11</td>
+	<td style="text-align:right;"><a href="/11.html">11</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">One Egg</td>
