--- a/html/index_290.html
+++ b/html/index_290.html
@@ -165,11 +165,11 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Apple Sauce</td>
-	<td style="text-align:right;">13</td>
+	<td style="text-align:right;"><a href="/.html">13</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Angle Food</td>
-	<td style="text-align:right;">13 −19</td>
+	<td style="text-align:right;"><a href="/13.html">13</a> −19</td>
 </tr>
 <tr>
 	<td style="text-align:left;">Apricot Icebox</td>
@@ -185,7 +185,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Chocolate</td>
-	<td style="text-align:right;"><a href="/09/html">9</a> − <a href="/10.html">10</a> − 14</td>
+	<td style="text-align:right;"><a href="/09/html">9</a> − <a href="/10.html">10</a> − <a href="/14.html">14</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Devil’s Food</td>
@@ -201,7 +201,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Fruit Cake</td>
-	<td style="text-align:right;">14 − 15</td>
+	<td style="text-align:right;"><a href="/14.html">14</a> − 15</td>
 </tr>
 <tr>
 	<td style="text-align:left;">Gingerbread Banana</td>
