--- a/html/index_290.html
+++ b/html/index_290.html
@@ -165,7 +165,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Apple Sauce</td>
-	<td style="text-align:right;"><a href="/.html">13</a></td>
+	<td style="text-align:right;"><a href="/13.html">13</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Angle Food</td>
