Normalized case in recipe titles

--- a/html/10.html
+++ b/html/10.html
@@ -4,10 +4,10 @@
 <head>
 	<meta name="format" content="complete"/>
 	<title>Page 10, Cake continued</title>
-	<meta name="keywords" content="Devil’s food cake, Irish potato cake, Danish orange cake"/>
+	<meta name="keywords" content="Devil’s food cake, Irish potato cake,Danish orange cake"/>
 </head>
 <body>
-<h2>Devil’s Food Cake (Mrs. Keith)</h2>
+<h2>Devil’s food cake (Mrs. Keith)</h2>
 
 <ul>
 <li>2 cups brown sugar</li>
@@ -22,7 +22,7 @@
 
 <p>Bake in layers. See Frosting #7</p>
 
-<h2>Irish Potato Cake</h2>
+<h2>Irish potato cake</h2>
 
 <ul>
 <li>1 cup butter</li>
