--- a/html/12.html
+++ b/html/12.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Dixie spice cake, pecan cake"/>
 </head>
 <body>
-<h2>Dixie Spice Cake</h2>
+<h2>Dixie spice cake</h2>
 
 <ul>
 <li>1/3 cup Crisco</li>
