--- a/html/11.html
+++ b/html/11.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Layer cake, cocoa cream cake,"/>
 </head>
 <body>
-<h2>Layer Cake (Mrs. Lawrence)</h2>
+<h2>Layer cake (Mrs. Lawrence)</h2>
 
 <ul>
 <li>2/3 cup shortening</li>
@@ -22,7 +22,7 @@
 
 <p>For frosting see Frosting #1</p>
 
-<h2>Cocoa Cream Cake</h2>
+<h2>Cocoa cream cake</h2>
 
 <ul>
 <li>2/3 cup Crisco</li>
