--- a/html/index_291.html
+++ b/html/index_291.html
@@ -33,7 +33,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Pineapple</td>
-	<td style="text-align:right;">18 − 29</td>
+	<td style="text-align:right;"><a href="/18.html">18</a> − 29</td>
 </tr>
 <tr>
 	<td style="text-align:left;">Queen of Hearts</td>
