--- a/html/index_290.html
+++ b/html/index_290.html
@@ -173,11 +173,11 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Apricot Icebox</td>
-	<td style="text-align:right;">17</td>
+	<td style="text-align:right;"><a href="/17.html">17</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Banana Loaf</td>
-	<td style="text-align:right;">18</td>
+	<td style="text-align:right;"><a href="/18.html">18</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Coconut Cream</td>
@@ -197,7 +197,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Divinity</td>
-	<td style="text-align:right;">17</td>
+	<td style="text-align:right;"><a href="/17.html">17</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Fruit Cake</td>
