--- a/html/index_290.html
+++ b/html/index_290.html
@@ -169,7 +169,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Angle Food</td>
-	<td style="text-align:right;"><a href="/13.html">13</a> −19</td>
+	<td style="text-align:right;"><a href="/13.html">13</a> −<a href="/19.html">19</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Apricot Icebox</td>
@@ -205,7 +205,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Gingerbread Banana</td>
-	<td style="text-align:right;">20</td>
+	<td style="text-align:right;"><a href="/20.html">20</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Irish Potato</td>
@@ -217,7 +217,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">One Egg</td>
-	<td style="text-align:right;">19</td>
+	<td style="text-align:right;"><a href="/20.html">20</a></td>
 </tr>
 </tbody>
 </table>
