--- a/html/index_291.html
+++ b/html/index_291.html
@@ -165,17 +165,68 @@
 </tr>
 </tbody>
 </table>
-<p>| Frostings | Page |
-| Coconut Cream #2 | 43 |
-| Chocolate #4 | 44 − 45 |
-| Devil’s Food #7 | 45 |
-| Chocolate Syrup | 45 |
-| Divinity #6 | 44 |
-| Irish Potato (car) #8 | 45 |
-| Layer Cake #1 | 43 |
-| Lemon Cheese Filling | 45 |
-| Icing Delight | 46 |
-| Nut Icing | 47 |
-| Orange Cake | 48 |</p>
+
+
+<table>
+<colgroup>
+<col style="text-align:left;"/>
+<col style="text-align:right;"/>
+</colgroup>
+
+<thead>
+<tr>
+	<th style="text-align:left;">Frostings</th>
+	<th style="text-align:right;">Page</th>
+</tr>
+</thead>
+
+<tbody>
+<tr>
+	<td style="text-align:left;">Coconut Cream #2</td>
+	<td style="text-align:right;">43</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Chocolate #4</td>
+	<td style="text-align:right;">44 − 45</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Devil’s Food #7</td>
+	<td style="text-align:right;">45</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Chocolate Syrup</td>
+	<td style="text-align:right;">45</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Divinity #6</td>
+	<td style="text-align:right;">44</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Irish Potato (car) #8</td>
+	<td style="text-align:right;">45</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Layer Cake #1</td>
+	<td style="text-align:right;">43</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Lemon Cheese Filling</td>
+	<td style="text-align:right;">45</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Icing Delight</td>
+	<td style="text-align:right;">46</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Nut Icing</td>
+	<td style="text-align:right;">47</td>
+</tr>
+<tr>
+	<td style="text-align:left;">Orange Cake</td>
+	<td style="text-align:right;">48</td>
+</tr>
+</tbody>
+</table>
+
 </body>
 </html>
