--- a/html/22.html
+++ b/html/22.html
@@ -13,16 +13,16 @@
 
 <ul>
 <li>2 sticks of butter or 1 cup Crisco</li>
-<li>1 3/4 cup sugar</li>
+<li>1 ¾ cup sugar</li>
 <li>2 cups flour, sifted</li>
 <li>1 teaspoon vanilla</li>
-<li>1/2 teaspoon salt</li>
+<li>½ teaspoon salt</li>
 <li>5 eggs added one at a time</li>
 </ul>
 
 <h2>Sister’s magic fruit cake</h2>
 
-<p>Mix can of condensed milk, pound of dates, cup of pecans, cup raisins, 1/2 cup crystalized cherries, one slice crystalized pineapple, and add enough fresh grated coconut to make a stiff paste. Pack in a loaf pan (9” x 4”) that has been greased and lined with wax paper. Bake at 375 degrees Fahrenheit 50 minutes and after 30 minutes reduce heat to 275º for the rest of the time. Remove from pan and take paper off immediately. Allow to cool before slicing.</p>
+<p>Mix can of condensed milk, pound of dates, cup of pecans, cup raisins, ½ cup crystalized cherries, one slice crystalized pineapple, and add enough fresh grated coconut to make a stiff paste. Pack in a loaf pan (9” x 4”) that has been greased and lined with wax paper. Bake at 375 degrees Fahrenheit 50 minutes and after 30 minutes reduce heat to 275º for the rest of the time. Remove from pan and take paper off immediately. Allow to cool before slicing.</p>
 
 <h2>Velvet orange chocolate cake</h2>
 
