--- a/html/index_291.html
+++ b/html/index_291.html
@@ -89,7 +89,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Drop Cookies</td>
-	<td style="text-align:right;">25</td>
+	<td style="text-align:right;"><a href="/25.html">25</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Fudge Filled Cake</td>
@@ -97,7 +97,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Ice Box</td>
-	<td style="text-align:right;">25</td>
+	<td style="text-align:right;"><a href="/25.html">25</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Doughnuts</td>
@@ -105,7 +105,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Tea</td>
-	<td style="text-align:right;">25</td>
+	<td style="text-align:right;"><a href="/25.html">25</a></td>
 </tr>
 </tbody>
 </table>
