minor page 24 tweak

--- a/html/24.html
+++ b/html/24.html
@@ -7,6 +7,6 @@
 	<meta name="keywords" content="Blank page"/>
 </head>
 <body>
-<p><strong>Editor’s note:</strong> This page was left blank in the original book.</p>
+<p><strong>Editor’s note:</strong> This page intentionally left blank.</p>
 </body>
 </html>
