--- a/html/index_291.html
+++ b/html/index_291.html
@@ -63,11 +63,11 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Divinity</td>
-	<td style="text-align:right;">27</td>
+	<td style="text-align:right;"><a href="/27.html">27</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Nut Carmel Fudge</td>
-	<td style="text-align:right;">27</td>
+	<td style="text-align:right;"><a href="/27.html">27</a></td>
 </tr>
 </tbody>
 </table>
@@ -93,7 +93,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Fudge Filled Cake</td>
-	<td style="text-align:right;">26</td>
+	<td style="text-align:right;"><a href="/26.html">26</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Ice Box</td>
@@ -101,7 +101,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Doughnuts</td>
-	<td style="text-align:right;">26</td>
+	<td style="text-align:right;"><a href="/26.html">26</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Tea</td>
