--- a/html/index_291.html
+++ b/html/index_291.html
@@ -127,15 +127,15 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Glazed Baked Apples</td>
-	<td style="text-align:right;">29</td>
+	<td style="text-align:right;"><a href="/29.html">29</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Custard</td>
-	<td style="text-align:right;">30</td>
+	<td style="text-align:right;"><a href="/30.html">30</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Fruit Salad</td>
-	<td style="text-align:right;">29</td>
+	<td style="text-align:right;"><a href="/29.html">29</a></td>
 </tr>
 </tbody>
 </table>
