Link to ice cream on index.

--- a/html/index_291.html
+++ b/html/index_291.html
@@ -157,11 +157,11 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Ice Box Ice Cream</td>
-	<td style="text-align:right;">31</td>
+	<td style="text-align:right;"><a href="/31.html">31</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Strawberry Ice Cream</td>
-	<td style="text-align:right;">31</td>
+	<td style="text-align:right;"><a href="/31.html">31</a></td>
 </tr>
 </tbody>
 </table>
