--- a/html/index_294.html
+++ b/html/index_294.html
@@ -25,7 +25,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Cherry</td>
-	<td style="text-align:right;">33</td>
+	<td style="text-align:right;"><a href="/33.html">33</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon meringue bread</td>
@@ -33,11 +33,11 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon bisque</td>
-	<td style="text-align:right;">33</td>
+	<td style="text-align:right;"><a href="/33.html">33</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon</td>
-	<td style="text-align:right;">33</td>
+	<td style="text-align:right;"><a href="/33.html">33</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cream rice</td>
@@ -67,27 +67,27 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Butter scotch</td>
-	<td style="text-align:right;">34</td>
+	<td style="text-align:right;"><a href="/34.html">34</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Banana cream</td>
-	<td style="text-align:right;">37</td>
+	<td style="text-align:right;"><a href="/37.html">37</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chocolate</td>
-	<td style="text-align:right;">34</td>
+	<td style="text-align:right;"><a href="/34.html">34</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cherry cream</td>
-	<td style="text-align:right;">38</td>
+	<td style="text-align:right;"><a href="/38.html">38</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cherry cobbler</td>
-	<td style="text-align:right;">35</td>
+	<td style="text-align:right;"><a href="/35.html">35</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Coconut custard</td>
-	<td style="text-align:right;">38</td>
+	<td style="text-align:right;"><a href="/38.html">38</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cream chocolate chiffon</td>
@@ -95,7 +95,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon</td>
-	<td style="text-align:right;">36</td>
+	<td style="text-align:right;"><a href="/36.html">36</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Orange chiffon</td>
@@ -103,7 +103,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Pecan</td>
-	<td style="text-align:right;">34 − 40</td>
+	<td style="text-align:right;"><a href="/34.html">34</a> − 40</td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pumpkin</td>
@@ -111,7 +111,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Pecan cream</td>
-	<td style="text-align:right;">37</td>
+	<td style="text-align:right;"><a href="/37.html">37</a></td>
 </tr>
 </tbody>
 </table>
