--- a/html/index_294.html
+++ b/html/index_294.html
@@ -63,7 +63,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Apple spice</td>
-	<td style="text-align:right;">39</td>
+	<td style="text-align:right;"><a href="/39.html">39</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Butter scotch</td>
@@ -91,7 +91,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Cream chocolate chiffon</td>
-	<td style="text-align:right;">40</td>
+	<td style="text-align:right;"><a href="/40.html">40</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon</td>
@@ -99,15 +99,15 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Orange chiffon</td>
-	<td style="text-align:right;">39</td>
+	<td style="text-align:right;"><a href="/39.html">39</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pecan</td>
-	<td style="text-align:right;"><a href="/34.html">34</a> − 40</td>
+	<td style="text-align:right;"><a href="/34.html">34</a> − <a href="/40.html">40</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pumpkin</td>
-	<td style="text-align:right;">35</td>
+	<td style="text-align:right;"><a href="/35.html">35</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pecan cream</td>
