--- a/html/index_291.html
+++ b/html/index_291.html
@@ -183,47 +183,47 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Coconut Cream #2</td>
-	<td style="text-align:right;">43</td>
+	<td style="text-align:right;"><a href="/43.html#frosting2">43</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chocolate #4</td>
-	<td style="text-align:right;">44 − 45</td>
+	<td style="text-align:right;"><a href="/44.html#frosting4">44</a> − <a href="/45.html#frosting7">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Devil’s Food #7</td>
-	<td style="text-align:right;">45</td>
+	<td style="text-align:right;"><a href="/45.html">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chocolate Syrup</td>
-	<td style="text-align:right;">45</td>
+	<td style="text-align:right;"><a href="/45.html">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Divinity #6</td>
-	<td style="text-align:right;">44</td>
+	<td style="text-align:right;"><a href="44.html#frosting6">44</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Irish Potato (car) #8</td>
-	<td style="text-align:right;">45</td>
+	<td style="text-align:right;"><a href="45.html#frosting8">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Layer Cake #1</td>
-	<td style="text-align:right;">43</td>
+	<td style="text-align:right;"><a href="/43.html#frosting1">43</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Lemon Cheese Filling</td>
-	<td style="text-align:right;">45</td>
+	<td style="text-align:right;"><a href="/45.html">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Icing Delight</td>
-	<td style="text-align:right;">46</td>
+	<td style="text-align:right;"><a href="/46.html">46</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Nut Icing</td>
-	<td style="text-align:right;">47</td>
+	<td style="text-align:right;"><a href="/47.html">47</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Orange Cake</td>
-	<td style="text-align:right;">48</td>
+	<td style="text-align:right;"><a href="/48.html">48</a></td>
 </tr>
 </tbody>
 </table>
