--- a/html/index_292.html
+++ b/html/index_292.html
@@ -25,27 +25,27 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Pineapple #9</td>
-	<td style="text-align:right;">45</td>
+	<td style="text-align:right;"><a href="/45.html#frosting9">45</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pineapple meringue filling</td>
-	<td style="text-align:right;">46</td>
+	<td style="text-align:right;"><a href="/46.html">46</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pineapple cranberry filling</td>
-	<td style="text-align:right;">47</td>
+	<td style="text-align:right;"><a href="/47.html">47</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Queen of hearts #5</td>
-	<td style="text-align:right;">44</td>
+	<td style="text-align:right;"><a href="/44.html">44</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Spice #3</td>
-	<td style="text-align:right;">43</td>
+	<td style="text-align:right;"><a href="/43.html#frosting3">43</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Sea Foam</td>
-	<td style="text-align:right;">47</td>
+	<td style="text-align:right;"><a href="/47.html">47</a></td>
 </tr>
 </tbody>
 </table>
