--- a/html/14.html
+++ b/html/14.html
@@ -38,7 +38,7 @@
 
 <p>— Grandma Diegel</p>
 
-<h2>Chocolate cake (Alma Jeague)</h2>
+<h2>Chocolate cake (Alma Teague)</h2>
 
 <ul>
 <li>1 1/4 cup B. sugar</li>
