Cross reference frostings, blog

--- a/html/10.html
+++ b/html/10.html
@@ -20,7 +20,7 @@
 <li>1 cup butter and lard (mixed)</li>
 </ul>
 
-<p>Bake in layers. See Frosting #7</p>
+<p>Bake in layers. See <a href="/45.html#frosting7">frosting #7</a></p>
 
 <h2>Irish potato cake</h2>
 
@@ -41,7 +41,7 @@
 
 <p>Cream butter and sugar. Add warm potatoes (add egg yolks beaten). Add milk alternately with dry ingredients, add nuts (floured). Fold in beaten egg whites.</p>
 
-<p>See Frosting #8 for this cake</p>
+<p>See <a href="/45.html#frosting8">frosting #8</a> for this cake</p>
 
 <h2>Danish Orange Cake (Ethna)</h2>
 
