--- a/html/11.html
+++ b/html/11.html
@@ -20,7 +20,7 @@
 <li>1 teaspoon vanilla</li>
 </ul>
 
-<p>For frosting see Frosting #1</p>
+<p>For frosting see <a href="/43.html#frosting1">frosting #1</a></p>
 
 <h2>Cocoa cream cake</h2>
 
@@ -43,6 +43,6 @@
 
 <p>Spread cocoa cream frosting between layers and on top and sides of cake.</p>
 
-<p>See frosting for this cake in #2 Frostings</p>
+<p>See frosting for this cake in <a href="/43.html#frosting2">#2 frostings</a></p>
 </body>
 </html>
