--- a/html/12.html
+++ b/html/12.html
@@ -24,7 +24,7 @@
 
 <p>Put all ingredients together in a mixing bowl and beat thoroughly until smooth. Bake 20 minutes in layer cake tins, at 376º F.</p>
 
-<p>For the filling and frosting see Frosting #3</p>
+<p>For the filling and frosting see <a href="/43.html#frosting3">frosting #3</a></p>
 
 <h2>Pecan cake</h2>
 
