--- a/html/14.html
+++ b/html/14.html
@@ -51,6 +51,6 @@
 <li>1 teaspoon vanilla</li>
 </ul>
 
-<p>Frosting for this cake, see Frosting #4</p>
+<p>Frosting for this cake, see <a href="/44.html#frosting4">Frosting #4</a></p>
 </body>
 </html>
