--- a/html/16.html
+++ b/html/16.html
@@ -32,6 +32,6 @@
 
 <p>Sift and measure flour. Sift again with other dry ingredients several times. Cream Crisco and sugar. Add dry ingredients and milk alternately. Add flavoring last. Fold in beaten egg whites. Bake in 2 or 3 layers. Set heat control for 350 ºF for 2 layers and bake 40 minutes; 3 layers 250 ºF, 30 minutes.</p>
 
-<p>See frosting for this cake under frosting #5</p>
+<p>See frosting for this cake under <a href="/44.html#frosting5">frosting #5</a></p>
 </body>
 </html>
