--- a/html/17.html
+++ b/html/17.html
@@ -37,6 +37,6 @@
 
 <p>Cream crisco until soft. Blend in sugar. Mix and sift flour, B.P., and salt and add to first mixture alternately with milk. Fold in egg whites, beaten until stiff, but not dry. Flavor with vanilla. Turn into 2 greased (9 inch layer pans). Bake in moderately hot oven (375 ºF) about 25 minutes. Cool and frost with Divinity Frosting.</p>
 
-<p>See frosting for this cake under Frosting #6.</p>
+<p>See frosting for this cake under <a href="/44.html#frosting6">frosting #6.</a></p>
 </body>
 </html>
