--- a/html/21.html
+++ b/html/21.html
@@ -19,7 +19,7 @@
 <li>1 teaspoon lemon</li>
 </ul>
 
-<p>See frosting #9 for this cake.</p>
+<p>See <a href="/45.html#frosting9">frosting #9</a> for this cake.</p>
 
 <h2>Dutch cake</h2>
 
