--- a/html/index_291.html
+++ b/html/index_291.html
@@ -199,7 +199,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Divinity #6</td>
-	<td style="text-align:right;"><a href="44.html#frosting6">44</a></td>
+	<td style="text-align:right;"><a href="/44.html#frosting6">44</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Irish Potato (car) #8</td>
