--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+	<meta charset="utf-8"/>
 	<meta name="format" content="complete"/>
 	<title>Archie’s Recipes</title>
 	<meta name="keywords" content="recipe book archive"/>
 </head>
 <body>
+
 <h1>Archie’s Recipes</h1>
 
 <p>When my grandparents passed away, my mother’s family rediscovered an old recipe book, written into an old ledger. The book contains 90 pages of recipes, categorized, and even indexed — all by hand. </p>
@@ -28,10 +29,12 @@
 <li><a href="/43.html">Frostings</a></li>
 <li><a href="/49.html">Fish</a></li>
 <li><a href="/51.html">Jelly, jam, and preserves</a></li>
+<li><a href="/55.html">Meats</a></li>
 </ul>
 
 <p>(Sections will be added as they are completed)</p>
 
 <p><a href="about.html">Learn more about the book here</a>. Updates and newly added pages will be announced in the <a href="/blog/">blog</a>.</p>
+
 </body>
 </html>
