--- a/html/index_292.html
+++ b/html/index_292.html
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+	<meta charset="utf-8"/>
 	<meta name="format" content="complete"/>
 	<title>Page 292, Index</title>
 	<meta name="keywords" content="Frostings, continued, fish, Jelly, jam, preserved, ketchup, krout, meat, pickles"/>
 </head>
 <body>
+
 
 
 <table>
@@ -175,51 +176,51 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Swedish meatballs</td>
-	<td style="text-align:right;">55</td>
+	<td style="text-align:right;"><a href="/55.html">55</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Mexene meatballs</td>
-	<td style="text-align:right;">56</td>
+	<td style="text-align:right;"><a href="/56.html">56</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Beef hash</td>
-	<td style="text-align:right;">55</td>
+	<td style="text-align:right;"><a href="/55.html">55</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Kiby</td>
-	<td style="text-align:right;">57</td>
+	<td style="text-align:right;"><a href="/57.html#kiby">57</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cold chicken loaf</td>
-	<td style="text-align:right;">56</td>
+	<td style="text-align:right;"><a href="/56.html">56</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Virginia ham loaf</td>
-	<td style="text-align:right;">57</td>
+	<td style="text-align:right;"><a href="/57.html#virginiahamloaf">57</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Sausage loaf</td>
-	<td style="text-align:right;">57</td>
+	<td style="text-align:right;"><a href="/57.html#sausageloaf">57</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Corn beef deluxe loaf</td>
-	<td style="text-align:right;">58</td>
+	<td style="text-align:right;"><a href="/58.html#cornbeefdeluxe">58</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pig in the poke</td>
-	<td style="text-align:right;">58</td>
+	<td style="text-align:right;"><a href="/58.html#piginpoke">58</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Brown stew</td>
-	<td style="text-align:right;">58</td>
+	<td style="text-align:right;"><a href="/58.html#brownstew">58</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Penny wise steak</td>
-	<td style="text-align:right;">59</td>
+	<td style="text-align:right;"><a href="/59.html#pennywisesteak">59</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Hot tamale pie</td>
-	<td style="text-align:right;">59</td>
+	<td style="text-align:right;"><a href="/59.html#hottamalepie">59</a></td>
 </tr>
 </tbody>
 </table>
@@ -249,6 +250,7 @@
 </tr>
 </tbody>
 </table>
+
 
 </body>
 </html>
