7 new pages plus index updates, with blog

--- a/html/index_293.html
+++ b/html/index_293.html
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+	<meta charset="utf-8"/>
 	<meta name="format" content="complete"/>
 	<title>Page 293, Index</title>
 	<meta name="keywords" content="Sauces, salads, soups, sandwiches, vegetables, waffles and hot cakes, macaroni"/>
 </head>
 <body>
+
 
 
 <table>
@@ -25,15 +26,15 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Barbecue</td>
-	<td style="text-align:right;">65 − 66</td>
+	<td style="text-align:right;"><a href="/65.html#mexene-barbecue-sauce">65</a> − <a href="/66.html#barbecue-sauce">66</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chili</td>
-	<td style="text-align:right;">65 − 66</td>
+	<td style="text-align:right;"><a href="/65.html#chili-sauce">65</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Hollandaise</td>
-	<td style="text-align:right;">65</td>
+	<td style="text-align:right;"><a href="/65.html#hollandaise-sauce">65</a></td>
 </tr>
 </tbody>
 </table>
@@ -237,22 +238,23 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Macaroni con carne</td>
-	<td style="text-align:right;">61</td>
+	<td style="text-align:right;"><a href="/61.html#macaroni-con-carne">61</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Macaroni loaf</td>
-	<td style="text-align:right;">61</td>
+	<td style="text-align:right;"><a href="/61.html#macaroni-loaf">61</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Macaroni sauce</td>
-	<td style="text-align:right;">61</td>
+	<td style="text-align:right;"><a href="/61.html#macaroni-sauce">61</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Macaroni and ham escallop</td>
-	<td style="text-align:right;">62</td>
+	<td style="text-align:right;"><a href="/62.html#macaroni-ham-escallop">62</a></td>
 </tr>
 </tbody>
 </table>
+
 
 </body>
 </html>
