--- a/html/index_292.html
+++ b/html/index_292.html
@@ -132,7 +132,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Tomato</td>
-	<td style="text-align:right;">64</td>
+	<td style="text-align:right;"><a href="/64.html#tomato-ketchup">64</a></td>
 </tr>
 </tbody>
 </table>
@@ -154,7 +154,7 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Sauerkraut</td>
-	<td style="text-align:right;">64</td>
+	<td style="text-align:right;"><a href="/64.html#sauerkrout">64</a></td>
 </tr>
 </tbody>
 </table>
@@ -242,11 +242,11 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Dill and sweet</td>
-	<td style="text-align:right;">63</td>
+	<td style="text-align:right;"><a href="/63.html#dill-pickles">63</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Onion</td>
-	<td style="text-align:right;">63</td>
+	<td style="text-align:right;"><a href="/63.html#onion-pickles">63</a></td>
 </tr>
 </tbody>
 </table>
