update home page with links to new sections

--- a/html/index.html
+++ b/html/index.html
@@ -30,6 +30,10 @@
 <li><a href="/49.html">Fish</a></li>
 <li><a href="/51.html">Jelly, jam, and preserves</a></li>
 <li><a href="/55.html">Meats</a></li>
+<li><a href="/64.html#tomato-ketchup">Ketchup</a></li>
+<li><a href="/64.html#sauerkrout">Krout</a></li>
+<li><a href="/63.html#dill-pickles">Pickles</a></li>
+<li><a href="/65.html">Sauces</a></li>
 </ul>
 
 <p>(Sections will be added as they are completed)</p>
