Salad section, plus corrections

--- a/html/29.html
+++ b/html/29.html
@@ -1,12 +1,13 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+	<meta charset="utf-8"/>
 	<meta name="format" content="complete"/>
 	<title>Page 29, Desserts</title>
 	<meta name="keywords" content="Glazed baked apples, Fruit salad"/>
 </head>
 <body>
+
 <h1>Desserts</h1>
 
 <h2>Glazed baked apples</h2>
@@ -19,9 +20,7 @@
 <li>6 medium sized cooking apples</li>
 </ul>
 
-<p>Core apples and remove peel from top one third way down. Combine sugar, water, and candies and cook until sugar and candies dissolve. Fill center of apples with crushed pineapple and arrange in a buttered baking dish. Bake in a moderate hot oven (375ºF) until done, basting frequently with the red syrup.</p>
-
-<p><strong>Editor’s note:</strong> The original scan of this page (from 1999) has a glitch which makes one line of text unreadable. Above is a best guess at what the text contained. One day I hope I can re-scan this page.</p>
+<p>Core apples and remove peel from top one third way down. Combine sugar, water, and candies and cook until sugar and candies are dissolved, then fill centers of apples with crushed pineapple and arrange in a buttered baking dish. Bake in a moderate hot oven (375ºF) until done, basting frequently with the red syrup.</p>
 
 <h2>Fruit salad</h2>
 
@@ -36,5 +35,6 @@
 </ul>
 
 <p>Prepare fruit and chill. Slice avocado just before using and dip in lemon juice. Arrange fruits in crystal bowl on lettuce. Serve with French dressing.</p>
+
 </body>
 </html>
