--- a/html/index.html
+++ b/html/index.html
@@ -34,6 +34,7 @@
 <li><a href="/64.html#sauerkrout">Krout</a></li>
 <li><a href="/63.html#dill-pickles">Pickles</a></li>
 <li><a href="/65.html">Sauces</a></li>
+<li><a href="/67.html">Salads</a></li>
 </ul>
 
 <p>(Sections will be added as they are completed)</p>
