--- a/html/index_293.html
+++ b/html/index_293.html
@@ -56,39 +56,39 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Carrot</td>
-	<td style="text-align:right;">67</td>
+	<td style="text-align:right;"><a href="/67.html#carrot-salad">67</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chicken</td>
-	<td style="text-align:right;">67</td>
+	<td style="text-align:right;"><a href="/67.html#chicken-salad">67</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cabbage</td>
-	<td style="text-align:right;">69</td>
+	<td style="text-align:right;"><a href="/69.html#cold-slaw">69</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Ham</td>
-	<td style="text-align:right;">67</td>
+	<td style="text-align:right;"><a href="/67.html#ham-salad">67</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Potato</td>
-	<td style="text-align:right;">68</td>
+	<td style="text-align:right;"><a href="/68.html#potato-salad">68</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Pear</td>
-	<td style="text-align:right;">68</td>
+	<td style="text-align:right;"><a href="/68.html#pear-salad">68</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Peach and cheese</td>
-	<td style="text-align:right;">67</td>
+	<td style="text-align:right;"><a href="/67.html">67</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Salmon</td>
-	<td style="text-align:right;">68</td>
+	<td style="text-align:right;"><a href="/68.html#salmon-salad">68</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Tuna</td>
-	<td style="text-align:right;">69</td>
+	<td style="text-align:right;"><a href="/69.html#tuna-fish-salad">69</a></td>
 </tr>
 </tbody>
 </table>
