soups, sandwiches, vegetable recipes plus blog

--- a/html/71.html
+++ b/html/71.html
@@ -10,7 +10,7 @@
 
 <h1>Soups</h1>
 
-<h2>Bean soup</h2>
+<h2 id="bean-soup">Bean soup</h2>
 
 <ul>
 <li>1 ham shank</li>
@@ -21,7 +21,7 @@
 
 <p>Soak beans overnight. Cover ham shank with water, simmer several hours, add beans, celery, onions, and tomato. Cook until tender, season to taste. A tablespoon of hot mashed potatoes serve in this soup is very good.</p>
 
-<h2>Chicken gumbo</h2>
+<h2 id="chicken-gumbo">Chicken gumbo</h2>
 
 <ul>
 <li>3 pints chicken broth</li>
@@ -35,7 +35,7 @@
 
 <p>Fry onion in butter lightly; add the chicken broth, tomatoes and okra cut in rings. Simmer 30 minutes. Season and add the diced chicken. If too thick, add more broth or water. Serve with a tablespoon of cooked rice with the soup.</p>
 
-<h2>Vegetable soup</h2>
+<h2 id="vegetable-soup">Vegetable soup</h2>
 
 <p>Cover a soup bone with cold water. Cook slowly and when meat and marrow fall from bones. Strain and add more water and diced vegetables. Such as potatoes, cabbage, tomatoes, celery, corn, onions, peas. Cook dry beans separately. Boil until thoroughly done. Season and serve.</p>
 
