--- a/html/index.html
+++ b/html/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8"/>
-	<meta name="format" content="complete"/>
+	<meta charset="utf-8">
+	<meta name="format" content="complete">
 	<title>Archie’s Recipes</title>
-	<meta name="keywords" content="recipe book archive"/>
+	<meta name="keywords" content="recipe book archive">
 </head>
 <body>
 
@@ -35,6 +35,9 @@
 <li><a href="/63.html#dill-pickles">Pickles</a></li>
 <li><a href="/65.html">Sauces</a></li>
 <li><a href="/67.html">Salads</a></li>
+<li><a href="/71.html">Soups</a></li>
+<li><a href="/72.html">Sandwiches</a></li>
+<li><a href="/73.html">Vegetables</a></li>
 </ul>
 
 <p>(Sections will be added as they are completed)</p>
