--- a/html/index_293.html
+++ b/html/index_293.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 <head>
-	<meta charset="utf-8"/>
-	<meta name="format" content="complete"/>
+	<meta charset="utf-8">
+	<meta name="format" content="complete">
 	<title>Page 293, Index</title>
-	<meta name="keywords" content="Sauces, salads, soups, sandwiches, vegetables, waffles and hot cakes, macaroni"/>
+	<meta name="keywords" content="Sauces, salads, soups, sandwiches, vegetables, waffles and hot cakes, macaroni">
 </head>
 <body>
-
-
 
 <table>
 <colgroup>
@@ -38,7 +36,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -93,7 +90,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -110,19 +106,18 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Bean</td>
-	<td style="text-align:right;">71</td>
+	<td style="text-align:right;"><a href="/71.html#bean-soup">71</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Chicken jumbo</td>
-	<td style="text-align:right;">71</td>
+	<td style="text-align:right;"><a href="/71.html#chicken-gumbo">71</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Vegetable</td>
-	<td style="text-align:right;">71</td>
+	<td style="text-align:right;"><a href="/71.html#vegetable-soup">71</a></td>
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -140,15 +135,14 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Club</td>
-	<td style="text-align:right;">72</td>
+	<td style="text-align:right;"><a href="/72.html#cheese-tomato">72</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Cheese and tomato</td>
-	<td style="text-align:right;">72</td>
+	<td style="text-align:right;"><a href="/72.html#club">72</a></td>
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -166,27 +160,26 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Succotash</td>
-	<td style="text-align:right;">73</td>
+	<td style="text-align:right;"><a href="/73.html#succotash">73</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Potatoes on half shell</td>
-	<td style="text-align:right;">74</td>
+	<td style="text-align:right;"><a href="/74.html#potatoes-half-shell">74</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Potatoes stuffed with ham</td>
-	<td style="text-align:right;">74</td>
+	<td style="text-align:right;"><a href="/74.html#ham-potatoes">74</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Baked peppers</td>
-	<td style="text-align:right;">74</td>
+	<td style="text-align:right;"><a href="/74.html#baked-peppers">74</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Stuffed peppers</td>
-	<td style="text-align:right;">73</td>
+	<td style="text-align:right;"><a href="/73.html#stuffed-peppers">73</a></td>
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -221,7 +214,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -254,7 +246,6 @@
 </tr>
 </tbody>
 </table>
-
 
 </body>
 </html>
