--- a/html/index_291.html
+++ b/html/index_291.html
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE>
+<html>
 <head>
-	<meta name="format" content="complete"/>
+	<meta charset="utf-8">
+	<meta name="format" content="complete">
 	<title>Page 291, Index</title>
-	<meta name="keywords" content="Index, cakes, candies, cookies, desserts, frostings"/>
+	<meta name="keywords" content="Index, cakes, candies, cookies, desserts, frostings">
 </head>
 <body>
-
 
 <table>
 <colgroup>
@@ -33,7 +32,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Pineapple</td>
-	<td style="text-align:right;"><a href="/18.html">18</a> − 29</td>
+	<td style="text-align:right;"><a href="/18.html">18</a> − <a href="/29.html">29</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Queen of Hearts</td>
@@ -45,7 +44,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -71,7 +69,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -110,7 +107,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -140,7 +136,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -165,7 +160,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -202,7 +196,7 @@
 	<td style="text-align:right;"><a href="/44.html#frosting6">44</a></td>
 </tr>
 <tr>
-	<td style="text-align:left;">Irish Potato (car) #8</td>
+	<td style="text-align:left;">Irish Potato (cake) #8</td>
 	<td style="text-align:right;"><a href="45.html#frosting8">45</a></td>
 </tr>
 <tr>
