waffles, hotcakes, and wine
final recipes!

--- a/html/index.html
+++ b/html/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
 <head>
 	<meta charset="utf-8">
@@ -31,13 +31,15 @@
 <li><a href="/51.html">Jelly, jam, and preserves</a></li>
 <li><a href="/55.html">Meats</a></li>
 <li><a href="/64.html#tomato-ketchup">Ketchup</a></li>
-<li><a href="/64.html#sauerkrout">Krout</a></li>
+<li><a href="/64.html#sauerkrout">Kraut</a></li>
 <li><a href="/63.html#dill-pickles">Pickles</a></li>
 <li><a href="/65.html">Sauces</a></li>
 <li><a href="/67.html">Salads</a></li>
 <li><a href="/71.html">Soups</a></li>
 <li><a href="/72.html">Sandwiches</a></li>
 <li><a href="/73.html">Vegetables</a></li>
+<li><a href="/77.html">Waffles and hot cakes</a></li>
+<li><a href="/79.html">Wine</a></li>
 </ul>
 
 <p>(Sections will be added as they are completed)</p>
