--- a/html/index_293.html
+++ b/html/index_293.html
@@ -197,19 +197,19 @@
 <tbody>
 <tr>
 	<td style="text-align:left;">Plain</td>
-	<td style="text-align:right;">77</td>
+	<td style="text-align:right;"><a href="/77.html#plain-waffles">77</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Sour milk</td>
-	<td style="text-align:right;">77</td>
+	<td style="text-align:right;"><a href="/77.html#sour-milk-waffles">77</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Hot cakes (flannel)</td>
-	<td style="text-align:right;">78</td>
+	<td style="text-align:right;"><a href="/78.html#hot-cakes">78</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Standard</td>
-	<td style="text-align:right;">77</td>
+	<td style="text-align:right;"><a href="/77.html#standard-waffles">77</a></td>
 </tr>
 </tbody>
 </table>
