--- a/html/index_290.html
+++ b/html/index_290.html
@@ -1,13 +1,12 @@
-<?xml version="1.0" encoding="UTF-8" standalone="yes" ?>
-<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE>
+<html>
 <head>
-	<meta name="format" content="complete"/>
+	<meta charset="utf-8">
+	<meta name="format" content="complete">
 	<title>Page 290, Contents - Index</title>
-	<meta name="keywords" content="Index"/>
+	<meta name="keywords" content="Index">
 </head>
 <body>
-
 
 <table>
 <colgroup>
@@ -38,7 +37,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -68,7 +66,6 @@
 </tbody>
 </table>
 
-
 <table>
 <colgroup>
 <col style="text-align:left;"/>
@@ -93,7 +90,7 @@
 </tr>
 <tr>
 	<td style="text-align:left;">Clarke’s Buns</td>
-	<td style="text-align:right;">78</td>
+	<td style="text-align:right;"><a href="/78.html#clarks-buns">78</a></td>
 </tr>
 <tr>
 	<td style="text-align:left;">Ginger Bread</td>
@@ -109,7 +106,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
@@ -147,7 +143,6 @@
 </tr>
 </tbody>
 </table>
-
 
 <table>
 <colgroup>
